--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
             <p class="fs-6 fw-semibold mb-3" style="color:var(--primary);">📌 Save My Number: 8856846126</p>
             <button class="wa-btn open-any glow-pulse" style="background:var(--white);color:var(--primary);border:1px solid var(--primary);">📲 Message on WhatsApp Now</button>
             <div class="text-center mt-4">
-                <a href="https://www.instagram.com/idp.nisha?igsh=MTY5bDJwYTJvMWJseA==" target="_blank" class="btn btn-outline-dark btn-lg d-inline-flex align-items-center gap-2"><i data-lucide="instagram" width="24"></i>Follow on Instagram</a>
+                <a href="https://www.instagram.com/successneha2024/?igsh=Zms5dHk4NjNjZXM4#==" target="_blank" class="btn btn-outline-dark btn-lg d-inline-flex align-items-center gap-2"><i data-lucide="instagram" width="24"></i>Follow on Instagram</a>
             </div>
         </div>
         <div class="card border-0 p-3 mb-3 glow-border" style="background:rgba(255,255,255,.15);">
