--- a/index.html
+++ b/index.html
@@ -125,12 +125,10 @@
         .stat-card:hover{transform:translateY(-5px);box-shadow:var(--shadow-hover);}
         .counter{font-size:2rem;font-weight:800;color:var(--primary);}
 
-        /* Feedback carousel */
-        .feedback-viewport{overflow:hidden;margin:1.5rem 0;}
-        .feedback-track{display:flex;gap:15px;width:max-content;animation:scrollLeft 30s linear infinite;}
-        .feedback-track:hover{animation-play-state:paused;}
-        @keyframes scrollLeft{0%{transform:translateX(0);}100%{transform:translateX(-50%);}}
-        .feedback-item{flex-shrink:0;width:300px;height:auto;border-radius:15px;overflow:hidden;box-shadow:var(--shadow);background:#000;}
+        /* BIG + MANUAL-SCROLL FEEDBACK */
+        .feedback-viewport{overflow-x:auto;overflow-y:hidden;margin:1.5rem 0;cursor:grab;}
+        .feedback-track{display:flex;gap:20px;width:max-content;padding-bottom:8px;}
+        .feedback-item{flex-shrink:0;width:550px;height:310px;border-radius:15px;overflow:hidden;box-shadow:var(--shadow);background:#000;}
         .feedback-item iframe{width:100%;height:100%;display:block;border:0;}
 
         .step-card{background: var(--white); border-radius:15px;padding:1.5rem;box-shadow:var(--shadow);transition:all .4s;height:100%;}
@@ -154,7 +152,7 @@
         @media(max-width:768px){
             section{padding:40px 0;}
             .hero-section{padding:50px 0 30px;}
-            .feedback-item{width:260px;}
+            .feedback-item{width:85vw;height:48vw;}
             .counter{font-size:1.6rem;}
             .wa-btn{width:100%;justify-content:center;}
             h1.display-3{font-size:2rem;}
@@ -231,7 +229,7 @@
     </div>
 </section>
 
-<!-- ===== FEEDBACK (YOUTUBE SHORTS) ===== -->
+<!-- ===== BIG + MANUAL-SCROLL FEEDBACK ===== -->
 <section class="py-5" style="background: var(--white);">
     <div class="container">
         <h2 class="text-center display-5 fw-bold mb-3" style="color:var(--primary);">✨ Real Success Stories</h2>
