--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
     <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=10010934885610843&ev=PageView&noscript=1"/></noscript>
 
     <style>
-        /* ===== NEW COLOR THEME ===== */
         :root {
-            --lightest: #E7F0FA;   /* page background */
-            --light:    #7BA4D0;   /* cards, borders */
-            --primary:  #2E5E99;   /* buttons, accents */
-            --darkest:  #0D2440;   /* text on light */
+            --lightest: #E7F0FA;
+            --light:    #7BA4D0;
+            --primary:  #2E5E99;
+            --darkest:  #0D2440;
             --white:    #FFFFFF;
             --shadow: 0 6px 20px rgba(46,94,153,.15);
             --shadow-hover: 0 10px 30px rgba(46,94,153,.25);
@@ -54,38 +53,12 @@
             overflow-x: hidden;
         }
 
-        /* Light Effects */
+        .glow-pulse { animation: pulseGlow 2.5s infinite; }
+
         @keyframes pulseGlow {
             0%,100%{box-shadow:0 0 20px rgba(123,164,208,.4);}
             50%{box-shadow:0 0 40px rgba(123,164,208,.8);}
         }
-        .glow-pulse { animation: pulseGlow 2.5s infinite; }
-
-        @keyframes shimmer {
-            0%{background-position:-200% 0;}100%{background-position:200% 0;}
-        }
-        .shine-effect{position:relative;overflow:hidden;}
-        .shine-effect::before{
-            content:'';position:absolute;top:-50%;left:-50%;width:200%;height:200%;
-            background:linear-gradient(45deg,transparent 30%,rgba(255,255,255,.35) 50%,transparent 70%);
-            background-size:200% 100%;animation:shimmer 3s infinite linear;transform:rotate(30deg);opacity:0;transition:opacity .3s;
-        }
-        .shine-effect:hover::before{opacity:1;}
-
-        /* Pure-white stats card */
-        .stats-white{
-            background:var(--white)!important;
-            color:var(--darkest)!important;
-            border:1px solid var(--light);
-        }
-
-        .glow-border{
-            border:2px solid transparent;
-            background:linear-gradient(var(--white),var(--white)) padding-box,
-                       linear-gradient(135deg,var(--primary),var(--light)) border-box;
-            transition:all .4s;
-        }
-        .glow-border:hover{box-shadow:0 0 25px rgba(46,94,153,.4);transform:translateY(-3px);}
 
         .wa-btn{
             background:linear-gradient(135deg,var(--primary),var(--light));
@@ -125,11 +98,12 @@
         .stat-card:hover{transform:translateY(-5px);box-shadow:var(--shadow-hover);}
         .counter{font-size:2rem;font-weight:800;color:var(--primary);}
 
-        /* REEL-SIZE + MANUAL-PLAY FEEDBACK */
-        .feedback-viewport{overflow-x:auto;overflow-y:hidden;margin:1.5rem 0;cursor:grab;padding-bottom:8px;}
-        .feedback-track{display:flex;gap:20px;width:max-content;}
-        .feedback-item{flex-shrink:0;width:320px;height:570px;border-radius:15px;overflow:hidden;box-shadow:var(--shadow);background:#000;}
-        video{width:100%;height:100%;display:block;object-fit:cover;border-radius:15px;}
+        /* REEL-SIZE CARDS */
+        .reel-track{display:flex;gap:15px;overflow-x:auto;padding-bottom:8px;}
+        .reel-card{flex:0 0 320px;height:570px;border-radius:15px;overflow:hidden;box-shadow:var(--shadow);cursor:pointer;position:relative;background:#000;}
+        .reel-thumb{width:100%;height:100%;object-fit:cover;}
+        .play-btn{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);width:60px;height:60px;background:rgba(255,255,255,.9);border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:24px;color:var(--primary);}
+        .reel-card:hover .play-btn{background:var(--white);}
 
         .step-card{background: var(--white); border-radius:15px;padding:1.5rem;box-shadow:var(--shadow);transition:all .4s;height:100%;}
         .step-card:hover{transform:translateY(-8px);box-shadow:var(--shadow-hover);}
@@ -140,7 +114,6 @@
         .accordion-button:not(.collapsed){background:linear-gradient(135deg,var(--lightest),var(--white));color:var(--primary);}
         .accordion-body{color:var(--darkest);}
 
-        /* Modal backdrops */
         .form-backdrop,.privacy-modal{position:fixed;inset:0;background:rgba(13,36,64,.8);backdrop-filter:blur(8px);z-index:9999;opacity:0;visibility:hidden;transition:all .4s;}
         .form-backdrop.show,.privacy-modal.show{opacity:1;visibility:visible;}
         #formContainer,#privacyContent{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%) scale(.9);z-index:10000;max-width:500px;width:90%;max-height:85vh;opacity:0;visibility:hidden;transition:all .4s;background:var(--white);border:1px solid var(--primary);border-radius:15px;box-shadow:var(--glow-intense);}
@@ -152,7 +125,7 @@
         @media(max-width:768px){
             section{padding:40px 0;}
             .hero-section{padding:50px 0 30px;}
-            .feedback-item{width:85vw;height:152vw;}
+            .reel-card{flex:0 0 85vw;height:152vw;}
             .counter{font-size:1.6rem;}
             .wa-btn{width:100%;justify-content:center;}
             h1.display-3{font-size:2rem;}
@@ -160,7 +133,6 @@
         }
         @media(prefers-reduced-motion:reduce){
             *{animation-duration:.01ms !important;transition-duration:.01ms !important;}
-            .shine-effect::before,.feedback-track{animation:none !important;}
         }
     </style>
 </head>
@@ -229,75 +201,32 @@
     </div>
 </section>
 
-<!-- ===== REEL-SIZE + MANUAL-PLAY FEEDBACK ===== -->
+<!-- ===== REEL-SIZE + CLICK TO PLAY FULL-SCREEN ===== -->
 <section class="py-5" style="background: var(--white);">
     <div class="container">
         <h2 class="text-center display-5 fw-bold mb-3" style="color:var(--primary);">✨ Real Success Stories</h2>
         <p class="text-center text-muted mb-4">100% real feedback from women in our community</p>
-        <div class="feedback-viewport">
-            <div class="feedback-track">
-                <!-- 5 YouTube Shorts (NO autoplay, voice ON) + duplicate -->
-                <div class="feedback-item">
-                    <video controls preload="metadata" poster="https://img.youtube.com/vi/prtaArdWN2M/0.jpg">
-                        <source src="https://www.youtube.com/embed/prtaArdWN2M" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
-                <div class="feedback-item">
-                    <video controls preload="metadata" poster="https://img.youtube.com/vi/lBVynqXZHMs/0.jpg">
-                        <source src="https://www.youtube.com/embed/lBVynqXZHMs" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
-                <div class="feedback-item">
-                    <video controls preload="metadata" poster="https://img.youtube.com/vi/QprrCX8Bj8Q/0.jpg">
-                        <source src="https://www.youtube.com/embed/QprrCX8Bj8Q" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
-                <div class="feedback-item">
-                    <video controls preload="metadata" poster="https://img.youtube.com/vi/bdnVQ-YVF8g/0.jpg">
-                        <source src="https://www.youtube.com/embed/bdnVQ-YVF8g" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
-                <div class="feedback-item">
-                    <video controls preload="metadata" poster="https://img.youtube.com/vi/qThJX6byIIM/0.jpg">
-                        <source src="https://www.youtube.com/embed/qThJX6byIIM" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
-                <!-- duplicate -->
-                <div class="feedback-item">
-                    <video controls preload="metadata" poster="https://img.youtube.com/vi/prtaArdWN2M/0.jpg">
-                        <source src="https://www.youtube.com/embed/prtaArdWN2M" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
-                <div class="feedback-item">
-                    <video controls preload="metadata" poster="https://img.youtube.com/vi/lBVynqXZHMs/0.jpg">
-                        <source src="https://www.youtube.com/embed/lBVynqXZHMs" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
-                <div class="feedback-item">
-                    <video controls preload="metadata" poster="https://img.youtube.com/vi/QprrCX8Bj8Q/0.jpg">
-                        <source src="https://www.youtube.com/embed/QprrCX8Bj8Q" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
-                <div class="feedback-item">
-                    <video controls preload="metadata" poster="https://img.youtube.com/vi/bdnVQ-YVF8g/0.jpg">
-                        <source src="https://www.youtube.com/embed/bdnVQ-YVF8g" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
-                <div class="feedback-item">
-                    <video controls preload="metadata" poster="https://img.youtube.com/vi/qThJX6byIIM/0.jpg">
-                        <source src="https://www.youtube.com/embed/qThJX6byIIM" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
+        <div class="reel-track">
+            <!-- 5 Reels (Click → Full-Screen YouTube Short) -->
+            <div class="reel-card shine-effect" onclick="window.open('https://youtube.com/shorts/prtaArdWN2M?si=kbe9PPV4d39-OgjG','_blank')">
+                <img src="https://img.youtube.com/vi/prtaArdWN2M/0.jpg" class="reel-thumb" alt="Story 1" loading="lazy">
+                <div class="play-btn">▶</div>
+            </div>
+            <div class="reel-card shine-effect" onclick="window.open('https://youtube.com/shorts/lBVynqXZHMs?si=T-Yr70XX74YAj5sC','_blank')">
+                <img src="https://img.youtube.com/vi/lBVynqXZHMs/0.jpg" class="reel-thumb" alt="Story 2" loading="lazy">
+                <div class="play-btn">▶</div>
+            </div>
+            <div class="reel-card shine-effect" onclick="window.open('https://youtube.com/shorts/QprrCX8Bj8Q?si=TLkQub7xQOcmQjtp','_blank')">
+                <img src="https://img.youtube.com/vi/QprrCX8Bj8Q/0.jpg" class="reel-thumb" alt="Story 3" loading="lazy">
+                <div class="play-btn">▶</div>
+            </div>
+            <div class="reel-card shine-effect" onclick="window.open('https://youtube.com/shorts/bdnVQ-YVF8g?si=S7dLVy6y1eP8TXjq','_blank')">
+                <img src="https://img.youtube.com/vi/bdnVQ-YVF8g/0.jpg" class="reel-thumb" alt="Story 4" loading="lazy">
+                <div class="play-btn">▶</div>
+            </div>
+            <div class="reel-card shine-effect" onclick="window.open('https://youtube.com/shorts/qThJX6byIIM?si=K9QGSa52rIRWCJxl','_blank')">
+                <img src="https://img.youtube.com/vi/qThJX6byIIM/0.jpg" class="reel-thumb" alt="Story 5" loading="lazy">
+                <div class="play-btn">▶</div>
             </div>
         </div>
     </div>
