--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 <!-- ===== REEL-SIZE + ON-PAGE FULL-SCREEN PLAY ===== -->
 <section class="py-5" style="background: var(--white);">
     <div class="container">
-        <h2 class="text-center display-5 fw-bold mb-3" style="color:var(--primary);">✨ Real Success Stories</h2>
+        <h2 class="text-center display-5 fw-bold mb-3" style="color:var(--primary);">✨ Neiha Shaikh mentorship results</h2>
         <p class="text-center text-muted mb-4">100% real feedback from women in our community</p>
         <div class="reel-track">
             <!-- 5 YouTube Shorts – click → full-screen on page -->
